--- a/src/questions/02-2-accessible.html.j2
+++ b/src/questions/02-2-accessible.html.j2
@@ -341,7 +341,7 @@
                     {%- if specialRepoServiceLevelAUuid == uuids.specialRepoServiceLevelDownloadAUuid %}
                       The repository will provide download-only service.
                     {%- elif specialRepoServiceLevelAUuid == uuids.specialRepoServiceLevelSimpleAUuid %}
-                      The repository will provice a search and simple access interface.
+                      The repository will provide a search and simple access interface.
                     {%- elif specialRepoServiceLevelAUuid == uuids.specialRepoServiceLevelAdvancedAUuid %}
                       The repository will provide an advanced processing service.
                     {%- endif -%}
@@ -401,7 +401,7 @@
                           The conditions will be published as part of open metadata.
                         {%- endif -%}
                         {% if licenseRestrictLink %}
-                          More infomation about the restrictions can be found here: <a href="{{ licenseRestrictLink }}" target="_blank">{{ licenseRestrictLink }}</a>.
+                          More information about the restrictions can be found here: <a href="{{ licenseRestrictLink }}" target="_blank">{{ licenseRestrictLink }}</a>.
                         {% endif %}
                       {%- endif -%}
                       </li>
