--- a/src/questions/02-2-accessible.html.j2
+++ b/src/questions/02-2-accessible.html.j2
@@ -173,7 +173,7 @@
               {%- set refDataConditionsAUuid = repliesMap[refDataConditionsPath]|reply_str_value -%}
               {%- if refDataConditionsAUuid -%}
                 <li>
-                  <div>{{ macros.integrationValue(refDataNameReply) }}</div>
+                  <div>{{ macros.integrationFairSharing(refDataNameReply) }}</div>
                   {% if refDataConditionsAUuid == uuids.refDataConditionsCC0AUuid -%}
                     It is freely available for any use (public domain or CC0).
                   {%- elif refDataConditionsAUuid == uuids.refDataConditionsCCBYAUuid -%}
@@ -193,7 +193,7 @@
               {%- set nrefDataConditionsAUuid = repliesMap[nrefDataConditionsPath]|reply_str_value -%}
               {%- if nrefDataConditionsAUuid -%}
                 <li>
-                  <div>{{ macros.integrationValue(nrefDataNameReply) }}</div>
+                  <div>{{ macros.integrationFairSharing(nrefDataNameReply) }}</div>
                   {% if nrefDataConditionsAUuid == uuids.nrefDataConditionsCC0AUuid -%}
                     It is freely available for any use (public domain or CC0).
                   {%- elif nrefDataConditionsAUuid == uuids.nrefDataConditionsCCBYAUuid -%}
@@ -221,7 +221,7 @@
             {%- set refDataConditionsAUuid = repliesMap[refDataConditionsPath]|reply_str_value -%}
             {%- if refDataConditionsAUuid -%}
               <li>
-                <div>{{ macros.integrationValue(refDataNameReply) }}</div>
+                <div>{{ macros.integrationFairSharing(refDataNameReply) }}</div>
                 {% if refDataConditionsAUuid == uuids.refDataConditionsCC0AUuid -%}
                   It is freely available for any use (public domain or CC0).
                 {%- elif refDataConditionsAUuid == uuids.refDataConditionsCCBYAUuid -%}
@@ -243,7 +243,7 @@
             {%- set nrefDataConditionsAUuid = repliesMap[nrefDataConditionsPath]|reply_str_value -%}
             {%- if nrefDataConditionsAUuid -%}
               <li>
-                <div>{{ macros.integrationValue(nrefDataNameReply) }}</div>
+                <div>{{ macros.integrationFairSharing(nrefDataNameReply) }}</div>
                 {% if nrefDataConditionsAUuid == uuids.nrefDataConditionsCC0AUuid -%}
                   It is freely available for any use (public domain or CC0).
                 {%- elif nrefDataConditionsAUuid == uuids.nrefDataConditionsCCBYAUuid -%}
@@ -298,7 +298,7 @@
                     {%- set domainSpecificRepoNamePath = [distroRepositoryKindPath, uuids.publishedDataRepositoryDomainSpecificAUuid, uuids.domainSpecificRepoNameQUuid]|reply_path -%}
                     {%- set domainSpecificRepoNameReply = repliesMap[domainSpecificRepoNamePath] -%}
                     {%- if domainSpecificRepoNameReply -%}
-                      : {{ macros.integrationValue(domainSpecificRepoNameReply) }}.
+                      : {{ macros.integrationFairSharing(domainSpecificRepoNameReply) }}.
                     {%- else -%}.
                     {% endif -%}
                     {# Contact the repository #}
@@ -320,7 +320,7 @@
                     {%- set generalPurposeRepoNamePath = [distroRepositoryKindPath, uuids.publishedDataRepositoryGeneralPurposeAUuid, uuids.generalPurposeRepoNameQUuid]|reply_path -%}
                     {%- set generalPurposeRepoNameReply = repliesMap[generalPurposeRepoNamePath] -%}
                     {%- if generalPurposeRepoNameReply -%}
-                      : {{ macros.integrationValue(generalPurposeRepoNameReply) }}.
+                      : {{ macros.integrationFairSharing(generalPurposeRepoNameReply) }}.
                     {%- else -%}.
                     {% endif -%}
                   {%- elif distroRepositoryKindAUuid == uuids.publishedDataRepositoryNationalAUuid %}
