--- a/src/questions/01-data-summary.html.j2
+++ b/src/questions/01-data-summary.html.j2
@@ -150,7 +150,7 @@
       <div>
         <h4>Re-used datasets</h4>
         {%- if refDataItems|length > 0 -%}
-          <div>We have found the following reference datasets that we have considered for re-use:
+          <div>We identified the following reference datasets considered for potential re-use:
           <ul>
             {%- for refDataItem in refDataItems -%}
               {%- set refDataPrefix = [refDataPath, refDataItem]|reply_path -%}
@@ -198,7 +198,7 @@
           </div>
         {%- endif -%}
         {%- if nrefDataItems|length > 0 -%}
-          <div>We have found the following non-reference datasets that we have considered for re-use:
+          <div>We identified the following non-reference datasets considered for potential re-use:
           <ul>
             {%- for nrefDataItem in nrefDataItems -%}
               {%- set nrefDataNamePath = [nrefDataPath, nrefDataItem, uuids.nrefDataNameQUuid]|reply_path -%}
